<resources>
    <string name="app_name">Calculadora</string>
    <string name="usuario">Usuario: </string>
    <string name="textView2"></string>
    <string name="textView3">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">*</string>
    <string name="division">/</string>
    <string name="igual">=</string>
    <string name="borrar">Borrar</string>
    <string name="limpiartodo">Limpiar Todo</string>
    <string name="edittexthint">Escribe tu nombre</string>
</resources>