<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/textView2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/textView3"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siete"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocho"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueve"
            app:layout_constraintBottom_toBottomOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/buttondivision"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toTopOf="@+id/button8" />

        <Button
            android:id="@+id/buttonborrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            app:layout_constraintBottom_toTopOf="@+id/buttondivision"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonlimpiartodo"
            app:layout_constraintStart_toStartOf="@+id/buttondivision"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonlimpiartodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiartodo"
            app:layout_constraintBottom_toBottomOf="@+id/buttonborrar"
            app:layout_constraintEnd_toStartOf="@+id/buttonborrar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonborrar" />

        <Button
            android:id="@+id/buttondivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            app:layout_constraintBottom_toBottomOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="@+id/buttonmultiplicacion"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintStart_toStartOf="@+id/buttonmultiplicacion"
            app:layout_constraintTop_toTopOf="@+id/button9" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuatro"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinco"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seis"
            app:layout_constraintBottom_toBottomOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/buttonmultiplicacion"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <Button
            android:id="@+id/buttonmultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            app:layout_constraintBottom_toBottomOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="@+id/buttonresta"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/buttonresta"
            app:layout_constraintTop_toTopOf="@+id/button6" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uno"
            app:layout_constraintBottom_toTopOf="@+id/buttonpunto"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dos"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tres"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/buttonresta"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/buttonresta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/buttonsuma"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/buttonsuma"
            app:layout_constraintTop_toTopOf="@+id/button3"
            app:layout_constraintVertical_bias="0.616" />

        <Button
            android:id="@+id/buttonigual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/igual"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/buttonsuma"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toTopOf="@+id/button0"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonpunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.884" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            app:layout_constraintBottom_toBottomOf="@+id/buttonpunto"
            app:layout_constraintEnd_toStartOf="@+id/buttonigual"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/buttonpunto"
            app:layout_constraintTop_toTopOf="@+id/buttonpunto"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonsuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            app:layout_constraintBottom_toBottomOf="@+id/buttonigual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonigual"
            app:layout_constraintTop_toTopOf="@+id/buttonigual" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
